<resources>
    <string name="app_name">ICareDoctor</string>

    <string-array name="item_page">
        <item>@string/txt_history_clinic</item>
        <item>@string/txt_schedule</item>
        <item>@string/txt_notify</item>
        <item>@string/txt_version</item>
        <item>@string/txt_logout</item>
    </string-array>
    <string name="txt_profile">Hồ Sơ</string>
    <string name="txt_history_clinic">Lịch Sử</string>
    <string name="txt_schedule">Lịch Hẹn</string>
    <string name="txt_notify">Thông Báo</string>
    <string name="txt_version">Phiên Bản</string>
    <string name="txt_logout">Đăng Xuất</string>
    <string name="txt_fullname">Họ và Tên</string>
    <string name="txt_phone">Điện Thoại</string>
    <string name="txt_password">Mật Khẩu</string>
    <string name="txt_forgot_password">Quên Mật Khẩu?</string>
    <string name="txt_register">Đăng Ký</string>
    <string name="txt_login">Đăng Nhập</string>
    <string name="txt_reset_pass">Đặt Lại Mật Khẩu</string>

    <string name="txt_circuit">Mạch</string>
    <string name="txt_blomin">Huyết Áp</string>
    <string name="txt_blomin_max">H.A Tối Đa</string>
    <string name="txt_blomin_min">H.A Tối Thiểu</string>
    <string name="txt_temper">Nhiệt Độ</string>
    <string name="txt_heartb">Nhịp Tim</string>
    <string name="txt_weight">Cân Nặng</string>
    <string name="txt_diagnose">Chẩn Đoán</string>
    <string name="txt_drug">Kê Đơn</string>
    <string name="txt_service">Chỉ Định</string>
    <string name="txt_drug_name">Tên Thuốc</string>
    <string name="txt_number">Số Lượng</string>
    <string name="txt_unit_name">ĐVT</string>
    <string name="txt_use">Cách Dùng</string>

    <string name="screen_home">@string/app_name</string>
    <string name="screen_schedule">Đặt Lịch Khám</string>
    <string name="screen_page">Hồ Sơ</string>

</resources>
