<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/img"
        android:scaleType="centerInside"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="@id/h2"
        app:layout_constraintEnd_toEndOf="@id/v2"
        app:layout_constraintStart_toStartOf="@id/v1"
        app:layout_constraintTop_toTopOf="@id/h1"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <LinearLayout
        android:id="@+id/box"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/tvLogin"
        app:layout_constraintEnd_toEndOf="@id/v2"
        app:layout_constraintStart_toStartOf="@id/v1"
        app:layout_constraintTop_toTopOf="@id/h2">

        <EditText
            android:id="@+id/edtNickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_6"
            android:drawableStart="@drawable/ic_username"
            android:hint="@string/txt_fullname"
            android:inputType="text"
            android:paddingStart="@dimen/dp_12"
            android:paddingEnd="@dimen/dp_12"
            android:textSize="@dimen/sp_16" />

        <EditText
            android:id="@+id/edtUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_6"
            android:drawableStart="@drawable/ic_username"
            android:hint="@string/txt_phone"
            android:inputType="phone"
            android:paddingStart="@dimen/dp_12"
            android:paddingEnd="@dimen/dp_12"
            android:textSize="@dimen/sp_16" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_6"
            android:drawableStart="@drawable/ic_password"
            android:hint="@string/txt_password"
            android:inputType="textPassword"
            android:paddingStart="@dimen/dp_12"
            android:paddingEnd="@dimen/dp_12"
            android:textSize="@dimen/sp_16" />

        <Button
            android:id="@+id/btnOk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_6"
            android:text="@string/txt_register"
            android:textSize="@dimen/sp_16"
            android:onClick="signUp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/dp_8"
        android:text="@string/txt_login"
        android:textColor="@color/red"
        android:textSize="@dimen/sp_14"
        android:onClick="gotoLogin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/box"
        app:layout_constraintVertical_bias="1" />

    <android.support.constraint.Guideline
        android:id="@+id/h1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <android.support.constraint.Guideline
        android:id="@+id/h2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <android.support.constraint.Guideline
        android:id="@+id/v1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <android.support.constraint.Guideline
        android:id="@+id/v2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

</android.support.constraint.ConstraintLayout>